# ecomm-product-assistant

./: .env  .gitignore  README.md  get_lib_versions.py  pyproject.toml  requirements.txt  scrapper_ui.py
data/: product_reviews.csv
notebook/: test.ipynb
product_assistant/etl/: data_ingestion.py
product_assistant/evaluation/: ragas_eval.py
product_assistant/retriever/: retrieval.py
product_assistant/router/: main.py
product_assistant/utils/: config_loader.py  model_loader.py
product_assistant/workflow/: workflow_class.py
