[project]
name = "ecomm-product-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain==0.3.27",
    "langchain-core==0.3.75",
    "pydantic==2.8.2",
    "python-dotenv==0.21.0",
    "streamlit==1.37.1",
]
